--- a/scooter_bike_ecommerce/static/css/base.css
+++ b/scooter_bike_ecommerce/static/css/base.css
@@ -70,7 +70,6 @@ body {
 	z-index: -1;
 }
 
-
 /* -------------------------------- Media Queries */
 
 /* Slightly larger container on xl screens */
@@ -92,5 +91,16 @@ body {
 
     .header-container {
         padding-top: 164px;
+    }
+}
+
+/* pad the top a bit when navbar is collapsed on mobile */
+@media (max-width: 991px) {
+    .header-container {
+        padding-top: 116px;
+    }
+
+    body {
+        height: calc(100vh - 116px);
     }
 }
