added category filtering

--- a/scooter_bike_ecommerce/templates/includes/main-nav.html
+++ b/scooter_bike_ecommerce/templates/includes/main-nav.html
@@ -17,7 +17,7 @@
                 Electric Scooters
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="Electric_Scooters-link">
-                <a href="" class="dropdown-item">All Electric Scooters</a>
+                <a href="{% url 'products' %}?category=electric_scooter" class="dropdown-item">All Electric Scooters</a>
             </div>
         </li>
 
@@ -26,7 +26,7 @@
                 Electric Bikes
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="Electric_Bikes-link">
-                <a href="" class="dropdown-item">All Electric Bikes</a>
+                <a href="{% url 'products' %}?category=electric_bike" class="dropdown-item">All Electric Bikes</a>
             </div>
         </li>
 
@@ -35,11 +35,12 @@
                 Special Offers
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="specials-link">
-                <a href="" class="dropdown-item">New Arrivals</a>
-                <a href="" class="dropdown-item">Deals</a>
-                <a href="" class="dropdown-item">Clearance</a>
-                <a href="" class="dropdown-item">All Specials</a>
+                <a href="{% url 'products' %}?category=new_arrivals" class="dropdown-item">New Arrivals</a>
+                <a href="{% url 'products' %}?category=deals" class="dropdown-item">Deals</a>
+                <a href="{% url 'products' %}?category=clearance" class="dropdown-item">Clearance</a>
+                <a href="{% url 'products' %}?category=new_arrivals,deals,clearance" class="dropdown-item">All Specials</a>
             </div>
         </li>
     </ul>
 </div>
+
