--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -119,7 +119,7 @@
         </div>
     </div>
     <div class="btt-button shadow-sm rounded-0 border border-black">
-        <a class="btt-link d-flex h-100">
+        <a href="#" class="btt-link d-flex h-100">
             <i class="fas fa-arrow-up text-black mx-auto my-auto"></i>
         </a>	
     </div>
