--- a/templates/base.html
+++ b/templates/base.html
@@ -2,40 +2,44 @@
 
 <!doctype html>
 <html lang="en">
-  <head>
+<head>
 
-    {% block meta %}
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    {% endblock %}
+  {% block meta %}
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Welcome to our scooter and bike ecommerce store! Browse our collection of electric scooters, electric bikes, new arrivals, deals, and clearance items. Enjoy fast and easy checkout.">
+    <meta name="keywords" content="scooter, bike, electric scooter, electric bike, new arrivals, deals, clearance">
+    <meta name="author" content="Anwar Dawoud">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  {% endblock %}
 
-    {% block extra_meta %}
-    {% endblock %}
+  {% block extra_meta %}
+  {% endblock %}
 
-    {% block corecss %}
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato&display=swap">
-        <link rel="stylesheet" href="{% static 'css/base.css' %}">
-    {% endblock %}
+  {% block corecss %}
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato&display=swap">
+    <link rel="stylesheet" href="{% static 'css/base.css' %}">
+  {% endblock %}
 
-    {% block extra_css %}
-    {% endblock %}
+  {% block extra_css %}
+  {% endblock %}
 
-    {% block corejs %}
-        <script src="https://kit.fontawesome.com/e971408b17.js" crossorigin="anonymous"></script>
-        <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-            <!-- Stripe -->
-        <script src="https://js.stripe.com/v3/"></script>
-    {% endblock %}
+  {% block corejs %}
+    <script src="https://kit.fontawesome.com/e971408b17.js" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <!-- Stripe -->
+    <script src="https://js.stripe.com/v3/"></script>
+  {% endblock %}
 
-    {% block extra_js %}
-    {% endblock %}
+  {% block extra_js %}
+  {% endblock %}
 
-    <title>scooter_bike_ecommerce{% block extra_title %}{% endblock %}</title>
-  </head>
+  <title>scooter_bike_ecommerce{% block extra_title %}{% endblock %}</title>
+</head>
+
    <body>
     <header class="container-fluid fixed-top">
         <div id="topnav" class="row bg-white pt-lg-2 d-none d-lg-flex">
@@ -111,6 +115,7 @@
                 <h4 class="logo-font my-1">Free delivery on orders over ${{ free_delivery_threshold }}!</h4>                
             </div>            
         </div>
+        <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/ff297693cef8d97b3e4d4669e/ce46dbb6a6f5336ac988bb675.js");</script>
     </header>
 
     {% if messages %}
@@ -134,8 +139,95 @@
     {% block page_header %}
     {% endblock %}
 
+
+    
+    
     {% block content %}
     {% endblock %}
+
+    <footer class="container-fluid bg-dark text-light py-3">
+        <div class="container">
+            <div>
+                <h4 class="m-0 text-center text-white contact-text">Follow us on:
+                    <a href="https://github.com/AnwarDawoud" target="_blank" rel="noopener noreferrer" role="button"
+                    aria-label="Visit AnwarDawoud's GitHub page (opens a new tab)">
+                        <i class="fab fa-github mx-2 fa-lg text-light"></i>
+                    </a>
+                    <a href="https://www.facebook.com/" target="_blank" rel="noopener" role="button" 
+                    aria-label="Visit our Facebook page (opens a new tab)">
+                        <i class="smicon fab fa-facebook-square mx-2 fa-lg text-white"></i>
+                    </a>
+                    <a href="https://twitter.com/" target="_blank" rel="noopener" role="button"
+                    aria-label="Visit our X page (opens a new tab)">
+                        <i class="smicon fab fa-square-x-twitter mx-2 fa-lg text-white"></i>
+                    </a>
+                    <a href="https://www.instagram.com/" target="_blank" rel="noopener" role="button"
+                    aria-label="Visit our Instagram page (opens a new tab)">
+                        <i class="smicon fab fa-instagram-square mx-2 fa-lg text-white"></i>
+                    </a>
+                    <a href="https://www.youtube.com/" target="_blank" rel="noopener" role="button"
+                    aria-label="Visit our YouTube page (opens a new tab)">
+                        <i class="smicon fab fa-youtube-square mx-2 fa-lg text-white"></i>
+                    </a>
+                </h4>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6 col-lg-8 text-left mt-12">
+                        <h4 class="text-white contact-text">Feel free to contact us:</h4>
+                        <p class="text-white">Address: 12 Church Str., Castleisland, Co. Kerry, Ireland</p>
+                        <p class="text-white">Phone: +353 085 289 6751</p>
+                        <p class="text-white subscribe-text ">Email: scooterbike27@gmail.com</p>
+                        <h4>
+                            <a href="https://www.termsfeed.com/live/e4ad187b-9c23-4ef3-9302-530daffd81ca" target="_blank" rel="noopener" role="button"
+                            aria-label="View our Privacy Policy(opens a new tab)" class="text-decoration-none text-white">Our Privacy Policy</a>
+                        </h4>
+                        <p class="text-white">&copy; 2024 SCOOTERS & BIKES. All rights reserved.</p>
+                    </div>
+                    <div class="col-md-6 col-lg-4 d-flex mt-sm-4 newsletter">
+                        <div id="mc_embed_shell">
+                            <style type="text/css">
+                            #mc_embed_signup{background:#fff; false;clear:left; font:14px Helvetica,Arial,sans-serif; width: 400px; color: black}
+                            /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
+                               We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+                            </style>
+                            <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css">
+                            <div id="mc_embed_signup">
+                                <form action="https://herokuapp.us22.list-manage.com/subscribe/post?u=ff297693cef8d97b3e4d4669e&amp;id=4d034fa206&amp;f_id=00e2c4e1f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">
+                                    <div id="mc_embed_signup_scroll">
+                                        <h2 class="text-black subscribe-text">Subscribe to SCOOTERS & BIKES Newsletter to not miss on our new product arrivals!</h2>
+                                        <div class="indicates-required">
+                                            <span class="asterisk">*</span> indicates required
+                                        </div>
+                                        <div class="mc-field-group">
+                                            <label for="mce-EMAIL">E-Mail-Adress 
+                                                <span class="asterisk">*</span>
+                                            </label>
+                                            <input type="email" name="EMAIL" class="required email" id="mce-EMAIL" required="" value="">
+                                        </div>
+                                        <div id="mce-responses" class="clear foot">
+                                            <div class="response" id="mce-error-response" style="display: none;"></div>
+                                            <div class="response" id="mce-success-response" style="display: none;"></div>
+                                        </div>
+                                        <div aria-hidden="true" style="position: absolute; left: -5000px;">
+                                            <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups -->
+                                            <input type="text" name="b_ff297693cef8d97b3e4d4669e_4d034fa206" tabindex="-1" value="">
+                                        </div>
+                                        <div class="optionalParent">
+                                            <div class="clear foot">
+                                                <input type="submit" name="subscribe" id="mc-embedded-subscribe" class="button" value="Subscribe">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     {% block postloadjs %}
     <script type="text/javascript">
