added google verification file

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Welcome to our scooter and bike ecommerce store! Browse our collection of electric scooters, electric bikes, new arrivals, deals, and clearance items. Enjoy fast and easy checkout.">
-    <meta name="keywords" content="scooter, bike, Scooters, Bikes, electric scooter, electric bike, new arrivals, deals, clearance, Scooter and Bike Sales, Brand, Scooter Sales, Bike Sales, Scooter Brands, Bike Brands, Scooter Safety, Bike Safety, Commuting, Ireland, Kerry, Dublin, Lemireck, Galway, Europe">
+    <meta name="keywords" content="folding electric bike halfords, scooter, bike, Scooters, Bikes, electric scooter, electric bike, new arrivals, deals, clearance, Scooter and Bike Sales, Brand, Scooter Sales, Bike Sales, Scooter Brands, Bike Brands, Scooter Safety, Bike Safety, Commuting, Ireland, Kerry, Dublin, Lemireck, Galway, Europe">
     <meta name="author" content="Anwar Dawoud">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
   {% endblock %}
