added meta for google site verification

--- a/templates/base.html
+++ b/templates/base.html
@@ -38,6 +38,7 @@
   {% endblock %}
 
   <title>scooter_bike_ecommerce{% block extra_title %}{% endblock %}</title>
+  <meta name="google-site-verification" content="VUs43QXTwkigWZwFFYTGNJUHB7NKDDmUWFS1gphyTvQ" />
 </head>
 
    <body>
