added google analitics

--- a/templates/base.html
+++ b/templates/base.html
@@ -154,7 +154,7 @@
                     aria-label="Visit AnwarDawoud's GitHub page (opens a new tab)">
                         <i class="fab fa-github mx-2 fa-lg text-light"></i>
                     </a>
-                    <a href="https://www.facebook.com/" target="_blank" rel="noopener" role="button" 
+                    <a href="https://www.facebook.com/profile.php?id=61558736970397" target="_blank" rel="noopener" role="button" 
                     aria-label="Visit our Facebook page (opens a new tab)">
                         <i class="smicon fab fa-facebook-square mx-2 fa-lg text-white"></i>
                     </a>
@@ -228,12 +228,41 @@
                 </div>
             </div>
         </div>
+            <div class="row">
+            <div class="col-12 page-header mb-4">
+                <h2 class="text-uppercase">Stay in touch:</h2>
+                <hr class="block-divider block-divider--short">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 col-md-6">
+            <h3>Social</h3>
+            <p>Keep up to date with all our latest offers</p>
+            <a href="https://www.facebook.com/profile.php?id=61558736970397" target="_blank"><i class="fab fa-facebook-square"></i> Follow us on Facebook!</a>
+            </div>
+            <div class="col-12 col-md-6">
+            <h2>Subscribe!</h2>
+            <p>Get exclusive offers and discount codes by subscribing to our monthly newsletter</p>
+            <!-- Mailchimp signup form here -->
+            </div>
+        </div>
+        </section>
+    </div>
     </footer>
 
     {% block postloadjs %}
     <script type="text/javascript">
         $('.toast').toast('show');
     </script>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-B67EL3PBYC"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-B67EL3PBYC');
+</script>
     {% endblock %}
 
     
