adjust errors by User Profile

--- a/templates/base.html
+++ b/templates/base.html
@@ -247,6 +247,11 @@
             </div>
         </div>
         </section>
+        <a href="https://www.termsfeed.com/live/c3710778-e111-40c0-ba21-d9279a2cda43" target="_blank">
+    <div class="col-12">
+        Privacy Policy
+    </div>
+</a>
     </div>
     </footer>
 
