--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -11,8 +11,8 @@
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="all-products-link">
                 <a href="{% url 'products' %}?sort=price&direction=asc" class="dropdown-item">By Price</a>
-                <a href="{% url 'products' %}?sort=rating&direction=desc" class="dropdown-item ">By Rating</a>
-                <a href="{% url 'products' %}?sort=category&direction=asc" class="dropdown-item ">By Category</a>
+                <a href="{% url 'products' %}?sort=rating&direction=desc" class="dropdown-item">By Rating</a>
+                <a href="{% url 'products' %}?sort=category&direction=asc" class="dropdown-item">By Category</a>
                 <a href="{% url 'products' %}" class="dropdown-item">All Products</a>
             </div>
         </li>
@@ -46,6 +46,12 @@
                 <a href="{% url 'products' %}?category=new_arrivals,deals,clearance" class="dropdown-item">All Specials</a>
             </div>
         </li>
+
+        <!-- Separate Contact Us link with margin-left -->
+        <li class="nav-item ml-5">
+            <a class="logo-font font-weight-bold nav-link text-black" href="{% url 'contact_us' %}">
+                Contact Us
+            </a>
+        </li>
     </ul>
 </div>
-
