--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -19,7 +19,7 @@
                         <a href="{{ product.image.url }}" target="_blank">
                             <img class="card-img-top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
                         </a>
-                        {% else %}
+                    {% else %}
                         <a href="">
                             <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
                         </a>
@@ -43,12 +43,17 @@
                         <small class="text-muted">No Rating</small>
                     {% endif %}
                     {% if request.user.is_superuser %}
-                            <small class="ml-3">
-                                <a href="{% url 'edit_product' product.id %}">Edit</a> | 
-                                <a class="text-danger" href="{% url 'delete_product' product.id %}">Delete</a>
-                            </small>
+                        <small class="ml-3">
+                            <a href="{% url 'edit_product' product.id %}">Edit</a> | 
+                            <a class="text-danger" href="{% url 'delete_product' product.id %}">Delete</a>
+                        </small>
                     {% endif %}
                     <p class="mt-3">{{ product.description }}</p>
+                        {% if product_in_wishlist %}
+                            <button class="btn btn-outline-primary rounded-0 text-uppercase" disabled>Already in Wishlist</button>
+                        {% else %}
+                            <a href="{% url 'add_to_wishlist' product.id %}" class="btn btn-outline-primary rounded-0 text-uppercase">Add to Wishlist</a>
+                        {% endif %}
                     <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
                         {% csrf_token %}
                         <div class="form-row">
@@ -79,7 +84,6 @@
                                     </div>
                                 </div>
                             </div>
-
                             <div class="col-12">
                                 <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 mt-5">
                                     <span class="icon">
@@ -95,10 +99,41 @@
                 </div>
             </div>
         </div>
+
+        <!-- Product Reviews Section -->
+        <div class="row mt-5">
+            <div class="col">
+                <h2>Customer Reviews</h2>
+                {% if product.reviews.exists %}
+                    <ul>
+                        {% for review in product.reviews.all %}
+                            <li>
+                                <p><strong>{{ review.user.username }}</strong> rated it {{ review.rating }}/5</p>
+                                <p>{{ review.comment }}</p>
+                                <p class="text-muted">Added: {{ review.date_added }}</p>
+                            </li>
+                        {% endfor %}
+                    </ul>
+                {% else %}
+                    <p>No reviews yet. Be the first to review this product!</p>
+                {% endif %}
+
+                <!-- Add a review form (if desired) -->
+                {% if user.is_authenticated %}
+                    <form method="post" action="{% url 'add_review' product.id %}">
+                        {% csrf_token %}
+                        {{ form.as_p }}
+                        <button type="submit" class="btn btn-primary">Submit Review</button>
+                    </form>
+                {% else %}
+                    <p>Please <a href="{% url 'account_login' %}">login</a> to leave a review.</p>
+                {% endif %}
+            </div>
+        </div>
     </div>
 {% endblock %}
 
 {% block postloadjs %}
-{{ block.super }}
-{% include 'products/includes/quantity_input_script.html' %}
+    {{ block.super }}
+    {% include 'products/includes/quantity_input_script.html' %}
 {% endblock %}
